[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/objects/player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/objects/sounds/sounds.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/objects/slow_motion_effect/slow_motion_effect.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/objects/prototype_world/world.gd" type="Script" id=4]
[ext_resource path="res://assets/objects/tile_set/tile_set.tres" type="TileSet" id=5]
[ext_resource path="res://assets/objects/camera/camera.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/art/button_prompts/SHIFT.png" type="Texture" id=7]
[ext_resource path="res://assets/objects/coin/coin.tscn" type="PackedScene" id=14]
[ext_resource path="res://assets/objects/end_level_zone/end_level_zone.tscn" type="PackedScene" id=16]

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 40, 40 )

[node name="world" type="Node2D"]
script = ExtResource( 4 )

[node name="EverythingButPlayer" type="Node2D" parent="."]

[node name="TileMap2" type="TileMap" parent="EverythingButPlayer"]
tile_set = ExtResource( 5 )
cell_size = Vector2( 8, 8 )
collision_bounce = 0.2
collision_layer = 4
collision_mask = 0
format = 1
tile_data = PoolIntArray( -1441832, 0, 0, -1441831, 0, 1, -1441830, 0, 1, -1441829, 0, 1, -1441828, 0, 1, -1441827, 0, 1, -1441826, 0, 1, -1441825, 0, 1, -1441824, 0, 1, -1441823, 0, 1, -1441822, 0, 1, -1441821, 0, 1, -1441820, 0, 1, -1441819, 0, 1, -1441818, 0, 1, -1441817, 0, 1, -1441816, 0, 1, -1441815, 0, 1, -1441814, 0, 1, -1441813, 0, 1, -1441812, 0, 1, -1441811, 0, 1, -1441810, 0, 1, -1441809, 0, 1, -1441808, 0, 1, -1441807, 0, 1, -1441806, 0, 1, -1441805, 0, 1, -1441804, 0, 1, -1441803, 0, 1, -1441802, 0, 1, -1441801, 0, 1, -1441800, 0, 1, -1441799, 0, 1, -1441798, 0, 1, -1441797, 0, 1, -1441796, 0, 1, -1441795, 0, 1, -1441794, 0, 1, -1441793, 0, 1, -1507328, 0, 1, -1507327, 0, 1, -1507326, 0, 1, -1507325, 0, 1, -1507324, 0, 1, -1507323, 0, 1, -1507322, 0, 1, -1507321, 0, 1, -1507320, 0, 1, -1507319, 0, 1, -1507318, 0, 1, -1507317, 0, 1, -1507316, 0, 1, -1507315, 0, 1, -1507314, 0, 1, -1507313, 0, 1, -1507312, 0, 1, -1507311, 0, 1, -1507310, 0, 1, -1507309, 0, 1, -1507308, 0, 1, -1507307, 0, 1, -1507306, 0, 1, -1507305, 0, 1, -1507304, 0, 1, -1507303, 0, 1, -1507302, 0, 1, -1507301, 0, 1, -1507300, 0, 1, -1507299, 0, 1, -1507298, 0, 1, -1507297, 0, 1, -1507296, 0, 1, -1507295, 0, 1, -1507294, 0, 1, -1507293, 0, 1, -1507292, 0, 1, -1507291, 0, 2, -1376296, 0, 65536, -1376295, 0, 65537, -1376294, 0, 65537, -1376293, 0, 65537, -1376292, 0, 65537, -1376291, 0, 65537, -1376290, 0, 65537, -1376289, 0, 65537, -1376288, 0, 65537, -1376287, 0, 65537, -1376286, 0, 65537, -1376285, 0, 65537, -1376284, 0, 65537, -1376283, 0, 65537, -1376282, 0, 65537, -1376281, 0, 65537, -1376280, 0, 65537, -1376279, 0, 65537, -1376278, 0, 65537, -1376277, 0, 65537, -1376276, 0, 65537, -1376275, 0, 65537, -1376274, 0, 65537, -1376273, 0, 65537, -1376272, 0, 65537, -1376271, 0, 65537, -1376270, 0, 65537, -1376269, 0, 65537, -1376268, 0, 65537, -1376267, 0, 65537, -1376266, 0, 65537, -1376265, 0, 65537, -1376264, 0, 65537, -1376263, 0, 65537, -1376262, 0, 65537, -1376261, 0, 65537, -1376260, 0, 65537, -1376259, 0, 65537, -1376258, 0, 65537, -1376257, 0, 65537, -1441792, 0, 65537, -1441791, 0, 65537, -1441790, 0, 65537, -1441789, 0, 65537, -1441788, 0, 65537, -1441787, 0, 65537, -1441786, 0, 65537, -1441785, 0, 65537, -1441784, 0, 65537, -1441783, 0, 65537, -1441782, 0, 65537, -1441781, 0, 65537, -1441780, 0, 65537, -1441779, 0, 65537, -1441778, 0, 65537, -1441777, 0, 65537, -1441776, 0, 65537, -1441775, 0, 65537, -1441774, 0, 65537, -1441773, 0, 65537, -1441772, 0, 65537, -1441771, 0, 65537, -1441770, 0, 65537, -1441769, 0, 65537, -1441768, 0, 65537, -1441767, 0, 65537, -1441766, 0, 65537, -1441765, 0, 65537, -1441764, 0, 65537, -1441763, 0, 65537, -1441762, 0, 65537, -1441761, 0, 65537, -1441760, 0, 65537, -1441759, 0, 65537, -1441758, 0, 65537, -1441757, 0, 65537, -1441756, 0, 65537, -1441755, 0, 65538, -1310760, 0, 65536, -1310759, 0, 65537, -1310758, 0, 65537, -1310757, 0, 65537, -1310756, 0, 65537, -1310755, 0, 65537, -1310754, 0, 65537, -1310753, 0, 65537, -1310752, 0, 65537, -1310751, 0, 65537, -1310750, 0, 65537, -1310749, 0, 65537, -1310748, 0, 65537, -1310747, 0, 65537, -1310746, 0, 65537, -1310745, 0, 65537, -1310744, 0, 65537, -1310743, 0, 65537, -1310742, 0, 65537, -1310741, 0, 65537, -1310740, 0, 0, -1310739, 0, 131073, -1310738, 0, 131073, -1310737, 0, 131073, -1310736, 0, 131073, -1310735, 0, 131073, -1310734, 0, 131073, -1310733, 0, 131073, -1310732, 0, 131073, -1310731, 0, 131073, -1310730, 0, 131073, -1310729, 0, 131073, -1310728, 0, 131073, -1310727, 0, 131073, -1310726, 0, 131073, -1310725, 0, 131073, -1310724, 0, 131073, -1310723, 0, 131073, -1310722, 0, 131073, -1310721, 0, 131073, -1376256, 0, 131073, -1376255, 0, 131073, -1376254, 0, 131073, -1376253, 0, 131073, -1376252, 0, 131073, -1376251, 0, 131073, -1376250, 0, 131073, -1376249, 0, 131073, -1376248, 0, 131073, -1376247, 0, 131073, -1376246, 0, 131073, -1376245, 0, 131073, -1376244, 0, 131073, -1376243, 0, 0, -1376242, 0, 65537, -1376241, 0, 65537, -1376240, 0, 65537, -1376239, 0, 65537, -1376238, 0, 65537, -1376237, 0, 65537, -1376236, 0, 65537, -1376235, 0, 65537, -1376234, 0, 65537, -1376233, 0, 65537, -1376232, 0, 65537, -1376231, 0, 65537, -1376230, 0, 65537, -1376229, 0, 65537, -1376228, 0, 65537, -1376227, 0, 65537, -1376226, 0, 65537, -1376225, 0, 65537, -1376224, 0, 65537, -1376223, 0, 65537, -1376222, 0, 65537, -1376221, 0, 65537, -1376220, 0, 65537, -1376219, 0, 65538, -1245224, 0, 65536, -1245223, 0, 65537, -1245222, 0, 65537, -1245221, 0, 65537, -1245220, 0, 65537, -1245219, 0, 65537, -1245218, 0, 65537, -1245217, 0, 65537, -1245216, 0, 65537, -1245215, 0, 65537, -1245214, 0, 65537, -1245213, 0, 65537, -1245212, 0, 65537, -1245211, 0, 65537, -1245210, 0, 65537, -1245209, 0, 65537, -1245208, 0, 65537, -1245207, 0, 65537, -1245206, 0, 0, -1245205, 0, 131073, -1245204, 0, 131074, -1310707, 0, 131072, -1310706, 0, 131073, -1310705, 0, 131073, -1310704, 0, 0, -1310703, 0, 65537, -1310702, 0, 65537, -1310701, 0, 65537, -1310700, 0, 65537, -1310699, 0, 65537, -1310698, 0, 65537, -1310697, 0, 65537, -1310696, 0, 65537, -1310695, 0, 65537, -1310694, 0, 65537, -1310693, 0, 65537, -1310692, 0, 65537, -1310691, 0, 65537, -1310690, 0, 65537, -1310689, 0, 65537, -1310688, 0, 65537, -1310687, 0, 65537, -1310686, 0, 65537, -1310685, 0, 65537, -1310684, 0, 65537, -1310683, 0, 65538, -1179688, 0, 65536, -1179687, 0, 65537, -1179686, 0, 65537, -1179685, 0, 65537, -1179684, 0, 65537, -1179683, 0, 65537, -1179682, 0, 65537, -1179681, 0, 65537, -1179680, 0, 65537, -1179679, 0, 65537, -1179678, 0, 65537, -1179677, 0, 65537, -1179676, 0, 65537, -1179675, 0, 65537, -1179674, 0, 65537, -1179673, 0, 65537, -1179672, 0, 0, -1179671, 0, 131073, -1179670, 0, 131074, -1245168, 0, 131072, -1245167, 0, 131073, -1245166, 0, 131073, -1245165, 0, 131073, -1245164, 0, 0, -1245163, 0, 65537, -1245162, 0, 65537, -1245161, 0, 65537, -1245160, 0, 65537, -1245159, 0, 65537, -1245158, 0, 65537, -1245157, 0, 65537, -1245156, 0, 65537, -1245155, 0, 65537, -1245154, 0, 65537, -1245153, 0, 65537, -1245152, 0, 65537, -1245151, 0, 65537, -1245150, 0, 65537, -1245149, 0, 65537, -1245148, 0, 65537, -1245147, 0, 65538, -1114152, 0, 65536, -1114151, 0, 65537, -1114150, 0, 65537, -1114149, 0, 65537, -1114148, 0, 65537, -1114147, 0, 65537, -1114146, 0, 65537, -1114145, 0, 65537, -1114144, 0, 65537, -1114143, 0, 65537, -1114142, 0, 65537, -1114141, 0, 65537, -1114140, 0, 65537, -1114139, 0, 65537, -1114138, 0, 0, -1114137, 0, 131073, -1114136, 0, 131074, -1179628, 0, 131072, -1179627, 0, 131073, -1179626, 0, 131073, -1179625, 0, 131073, -1179624, 0, 0, -1179623, 0, 65537, -1179622, 0, 65537, -1179621, 0, 65537, -1179620, 0, 65537, -1179619, 0, 65537, -1179618, 0, 65537, -1179617, 0, 65537, -1179616, 0, 65537, -1179615, 0, 65537, -1179614, 0, 65537, -1179613, 0, 65537, -1179612, 0, 65537, -1179611, 0, 65538, -1048616, 0, 65536, -1048615, 0, 65537, -1048614, 0, 65537, -1048613, 0, 65537, -1048612, 0, 65537, -1048611, 0, 65537, -1048610, 0, 65537, -1048609, 0, 65537, -1048608, 0, 65537, -1048607, 0, 65537, -1048606, 0, 65537, -1048605, 0, 65537, -1048604, 0, 0, -1048603, 0, 131073, -1048602, 0, 131074, -1114088, 0, 131072, -1114087, 0, 131073, -1114086, 0, 131073, -1114085, 0, 0, -1114084, 0, 65537, -1114083, 0, 65537, -1114082, 0, 65537, -1114081, 0, 65537, -1114080, 0, 65537, -1114079, 0, 65537, -1114078, 0, 65537, -1114077, 0, 65537, -1114076, 0, 65537, -1114075, 0, 65538, -983080, 0, 65536, -983079, 0, 65537, -983078, 0, 65537, -983077, 0, 65537, -983076, 0, 65537, -983075, 0, 65537, -983074, 0, 65537, -983073, 0, 65537, -983072, 0, 65537, -983071, 0, 0, -983070, 0, 131073, -983069, 0, 131073, -983068, 0, 131074, -1048549, 0, 131072, -1048548, 0, 131073, -1048547, 0, 131073, -1048546, 0, 0, -1048545, 0, 65537, -1048544, 0, 65537, -1048543, 0, 65537, -1048542, 0, 65537, -1048541, 0, 65537, -1048540, 0, 65537, -1048539, 0, 65538, -917544, 0, 65536, -917543, 0, 65537, -917542, 0, 65537, -917541, 0, 65537, -917540, 0, 65537, -917539, 0, 65537, -917538, 0, 65537, -917537, 0, 0, -917536, 0, 131073, -917535, 0, 131074, -983010, 0, 131072, -983009, 0, 131073, -983008, 0, 131073, -983007, 0, 131073, -983006, 0, 0, -983005, 0, 65537, -983004, 0, 65537, -983003, 0, 65538, -852008, 0, 65536, -852007, 0, 65537, -852006, 0, 65537, -852005, 0, 65537, -852004, 0, 65537, -852003, 0, 0, -852002, 0, 131073, -852001, 0, 131074, -851971, 0, 0, -851970, 0, 1, -851969, 0, 1, -917504, 0, 1, -917503, 0, 2, -917470, 0, 131072, -917469, 0, 131073, -917468, 0, 0, -917467, 0, 65538, -786472, 0, 65536, -786471, 0, 65537, -786470, 0, 65537, -786469, 0, 0, -786468, 0, 131073, -786467, 0, 131074, -786440, 0, 0, -786439, 0, 0, -786438, 0, 0, -786437, 0, 1, -786436, 0, 1, -786435, 0, 0, -786434, 0, 65537, -786433, 0, 65537, -851968, 0, 65537, -851967, 0, 0, -851966, 0, 1, -851965, 0, 1, -851964, 0, 1, -851963, 0, 1, -851962, 0, 1, -851961, 0, 1, -851960, 0, 1, -851959, 0, 2, -851932, 0, 65536, -851931, 0, 65538, -720936, 0, 65536, -720935, 0, 0, -720934, 0, 131073, -720933, 0, 131074, -720902, 0, 65536, -720901, 0, 65537, -720900, 0, 65537, -720899, 0, 65537, -720898, 0, 65537, -720897, 0, 65537, -786432, 0, 65537, -786431, 0, 65537, -786430, 0, 65537, -786429, 0, 65537, -786428, 0, 65537, -786427, 0, 65537, -786426, 0, 65537, -786425, 0, 65537, -786424, 0, 65537, -786423, 0, 0, -786422, 0, 1, -786421, 0, 1, -786420, 0, 2, -786396, 0, 65536, -786395, 0, 65538, -655400, 0, 65536, -655399, 0, 65538, -655366, 0, 131072, -655365, 0, 131073, -655364, 0, 131073, -655363, 0, 0, -655362, 0, 65537, -655361, 0, 65537, -720896, 0, 65537, -720895, 0, 65537, -720894, 0, 65537, -720893, 0, 65537, -720892, 0, 65537, -720891, 0, 65537, -720890, 0, 65537, -720889, 0, 65537, -720888, 0, 65537, -720887, 0, 65537, -720886, 0, 65537, -720885, 0, 65537, -720884, 0, 65538, -720860, 0, 65536, -720859, 0, 65538, -589864, 0, 65536, -589863, 0, 65538, -589827, 0, 65536, -589826, 0, 65537, -589825, 0, 65537, -655360, 0, 65537, -655359, 0, 65537, -655358, 0, 65537, -655357, 0, 65537, -655356, 0, 65537, -655355, 0, 65537, -655354, 0, 65537, -655353, 0, 65537, -655352, 0, 65537, -655351, 0, 65537, -655350, 0, 65537, -655349, 0, 65537, -655348, 0, 0, -655347, 0, 0, -655324, 0, 65536, -655323, 0, 65538, -524328, 0, 65536, -524327, 0, 65538, -524291, 0, 131072, -524290, 0, 131073, -524289, 0, 131073, -589824, 0, 131073, -589823, 0, 131073, -589822, 0, 131073, -589821, 0, 131073, -589820, 0, 131073, -589819, 0, 131073, -589818, 0, 131073, -589817, 0, 131073, -589816, 0, 131073, -589815, 0, 131073, -589814, 0, 131073, -589813, 0, 131073, -589812, 0, 131074, -589788, 0, 65536, -589787, 0, 65538, -458792, 0, 65536, -458791, 0, 65538, -524252, 0, 65536, -524251, 0, 65538, -393256, 0, 65536, -393255, 0, 65538, -458716, 0, 65536, -458715, 0, 65538, -327720, 0, 65536, -327719, 0, 65538, -393180, 0, 65536, -393179, 0, 65538, -262184, 0, 65536, -262183, 0, 65538, -327644, 0, 65536, -327643, 0, 65538, -196648, 0, 65536, -196647, 0, 65538, -262108, 0, 65536, -262107, 0, 65538, -131112, 0, 65536, -131111, 0, 65538, -196572, 0, 65536, -196571, 0, 65538, -65576, 0, 65536, -65575, 0, 65538, -131036, 0, 65536, -131035, 0, 65538, -40, 0, 65536, -39, 0, 65538, -65500, 0, 65536, -65499, 0, 65538, 65496, 0, 65536, 65497, 0, 65538, 36, 0, 65536, 37, 0, 65538, 131032, 0, 65536, 131033, 0, 0, 131034, 0, 2, 65572, 0, 65536, 65573, 0, 65538, 196568, 0, 65536, 196569, 0, 65537, 196570, 0, 65538, 131108, 0, 65536, 131109, 0, 65538, 262104, 0, 65536, 262105, 0, 65537, 262106, 0, 0, 262107, 0, 2, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196618, 0, 1, 196619, 0, 1, 196620, 0, 1, 196621, 0, 1, 196622, 0, 1, 196623, 0, 1, 196624, 0, 1, 196625, 0, 2, 196644, 0, 65536, 196645, 0, 65538, 327640, 0, 65536, 327641, 0, 65537, 327642, 0, 65537, 327643, 0, 65538, 262153, 0, 131072, 262154, 0, 131073, 262155, 0, 0, 262156, 0, 65537, 262157, 0, 65537, 262158, 0, 65537, 262159, 0, 65537, 262160, 0, 0, 262161, 0, 0, 262162, 0, 0, 262180, 0, 65536, 262181, 0, 65538, 393176, 0, 65536, 393177, 0, 65537, 393178, 0, 65537, 393179, 0, 65538, 393194, 0, 0, 393195, 0, 0, 393196, 0, 0, 393197, 0, 1, 393198, 0, 1, 393199, 0, 1, 393200, 0, 1, 393201, 0, 1, 393202, 0, 1, 393203, 0, 1, 393204, 0, 1, 393205, 0, 2, 327691, 0, 131072, 327692, 0, 131073, 327693, 0, 131073, 327694, 0, 131073, 327695, 0, 131073, 327696, 0, 131074, 327716, 0, 65536, 327717, 0, 65538, 458712, 0, 65536, 458713, 0, 65537, 458714, 0, 65537, 458715, 0, 0, 458716, 0, 2, 458732, 0, 131072, 458733, 0, 131073, 458734, 0, 131073, 458735, 0, 131073, 458736, 0, 131073, 458737, 0, 0, 458738, 0, 65537, 458739, 0, 0, 458740, 0, 131073, 458741, 0, 131074, 393252, 0, 65536, 393253, 0, 65538, 524248, 0, 65536, 524249, 0, 65537, 524250, 0, 65537, 524251, 0, 65537, 524252, 0, 65538, 524273, 0, 131072, 524274, 0, 131073, 524275, 0, 131074, 458787, 0, 0, 458788, 0, 0, 458789, 0, 65538, 589784, 0, 65536, 589785, 0, 65537, 589786, 0, 65537, 589787, 0, 65537, 589788, 0, 65538, 589820, 0, 0, 589821, 0, 1, 589822, 0, 1, 589823, 0, 1, 524288, 0, 1, 524289, 0, 1, 524290, 0, 1, 524291, 0, 1, 524292, 0, 2, 524322, 0, 0, 524323, 0, 0, 524324, 0, 65537, 524325, 0, 65538, 655320, 0, 65536, 655321, 0, 65537, 655322, 0, 65537, 655323, 0, 65537, 655324, 0, 0, 655325, 0, 2, 655356, 0, 131072, 655357, 0, 0, 655358, 0, 65537, 655359, 0, 65537, 589824, 0, 65537, 589825, 0, 65537, 589826, 0, 65537, 589827, 0, 0, 589828, 0, 131074, 589858, 0, 65536, 589859, 0, 65537, 589860, 0, 65537, 589861, 0, 65538, 720856, 0, 65536, 720857, 0, 65537, 720858, 0, 65537, 720859, 0, 65537, 720860, 0, 65537, 720861, 0, 65538, 720893, 0, 131072, 720894, 0, 131073, 720895, 0, 131073, 655360, 0, 131073, 655361, 0, 131073, 655362, 0, 131073, 655363, 0, 131074, 655394, 0, 65536, 655395, 0, 65537, 655396, 0, 65537, 655397, 0, 65538, 786392, 0, 65536, 786393, 0, 65537, 786394, 0, 65537, 786395, 0, 65537, 786396, 0, 65537, 786397, 0, 65538, 720929, 0, 0, 720930, 0, 0, 720931, 0, 65537, 720932, 0, 65537, 720933, 0, 65538, 851928, 0, 65536, 851929, 0, 65537, 851930, 0, 65537, 851931, 0, 65537, 851932, 0, 65537, 851933, 0, 65538, 786465, 0, 65536, 786466, 0, 65537, 786467, 0, 65537, 786468, 0, 65537, 786469, 0, 65538, 917464, 0, 65536, 917465, 0, 65537, 917466, 0, 65537, 917467, 0, 65537, 917468, 0, 65537, 917469, 0, 0, 917470, 0, 2, 852000, 0, 0, 852001, 0, 0, 852002, 0, 65537, 852003, 0, 65537, 852004, 0, 65537, 852005, 0, 65538, 983000, 0, 65536, 983001, 0, 65537, 983002, 0, 65537, 983003, 0, 65537, 983004, 0, 65537, 983005, 0, 65537, 983006, 0, 65538, 917535, 0, 0, 917536, 0, 0, 917537, 0, 65537, 917538, 0, 65537, 917539, 0, 65537, 917540, 0, 65537, 917541, 0, 65538, 1048536, 0, 65536, 1048537, 0, 65537, 1048538, 0, 65537, 1048539, 0, 65537, 1048540, 0, 65537, 1048541, 0, 65537, 1048542, 0, 65538, 983071, 0, 65536, 983072, 0, 65537, 983073, 0, 65537, 983074, 0, 65537, 983075, 0, 65537, 983076, 0, 65537, 983077, 0, 65538, 1114072, 0, 65536, 1114073, 0, 65537, 1114074, 0, 65537, 1114075, 0, 65537, 1114076, 0, 65537, 1114077, 0, 65537, 1114078, 0, 0, 1114079, 0, 2, 1048605, 0, 0, 1048606, 0, 1, 1048607, 0, 0, 1048608, 0, 65537, 1048609, 0, 65537, 1048610, 0, 65537, 1048611, 0, 65537, 1048612, 0, 65537, 1048613, 0, 65538, 1179608, 0, 65536, 1179609, 0, 65537, 1179610, 0, 65537, 1179611, 0, 65537, 1179612, 0, 65537, 1179613, 0, 65537, 1179614, 0, 65537, 1179615, 0, 65538, 1114140, 0, 0, 1114141, 0, 0, 1114142, 0, 65537, 1114143, 0, 65537, 1114144, 0, 65537, 1114145, 0, 65537, 1114146, 0, 65537, 1114147, 0, 65537, 1114148, 0, 65537, 1114149, 0, 65538, 1245144, 0, 65536, 1245145, 0, 65537, 1245146, 0, 65537, 1245147, 0, 65537, 1245148, 0, 65537, 1245149, 0, 65537, 1245150, 0, 65537, 1245151, 0, 65538, 1179668, 0, 0, 1179669, 0, 1, 1179670, 0, 1, 1179671, 0, 1, 1179672, 0, 1, 1179673, 0, 1, 1179674, 0, 1, 1179675, 0, 1, 1179676, 0, 0, 1179677, 0, 65537, 1179678, 0, 65537, 1179679, 0, 65537, 1179680, 0, 65537, 1179681, 0, 65537, 1179682, 0, 65537, 1179683, 0, 65537, 1179684, 0, 65537, 1179685, 0, 65538, 1310680, 0, 65536, 1310681, 0, 65537, 1310682, 0, 65537, 1310683, 0, 65537, 1310684, 0, 65537, 1310685, 0, 65537, 1310686, 0, 65537, 1310687, 0, 0, 1310688, 0, 2, 1310694, 0, 0, 1310695, 0, 1, 1310696, 0, 1, 1310697, 0, 1, 1310698, 0, 1, 1310699, 0, 1, 1310700, 0, 1, 1310701, 0, 1, 1310702, 0, 1, 1310703, 0, 1, 1310704, 0, 1, 1310705, 0, 1, 1310706, 0, 1, 1310707, 0, 1, 1310708, 0, 1, 1310709, 0, 1, 1310710, 0, 1, 1310711, 0, 1, 1310712, 0, 2, 1245200, 0, 0, 1245201, 0, 1, 1245202, 0, 1, 1245203, 0, 1, 1245204, 0, 0, 1245205, 0, 65537, 1245206, 0, 65537, 1245207, 0, 65537, 1245208, 0, 65537, 1245209, 0, 65537, 1245210, 0, 65537, 1245211, 0, 65537, 1245212, 0, 65537, 1245213, 0, 65537, 1245214, 0, 65537, 1245215, 0, 65537, 1245216, 0, 65537, 1245217, 0, 65537, 1245218, 0, 65537, 1245219, 0, 65537, 1245220, 0, 65537, 1245221, 0, 65538, 1376216, 0, 65536, 1376217, 0, 65537, 1376218, 0, 65537, 1376219, 0, 65537, 1376220, 0, 65537, 1376221, 0, 65537, 1376222, 0, 65537, 1376223, 0, 65537, 1376224, 0, 65538, 1376228, 0, 0, 1376229, 0, 1, 1376230, 0, 0, 1376231, 0, 65537, 1376232, 0, 65537, 1376233, 0, 65537, 1376234, 0, 65537, 1376235, 0, 65537, 1376236, 0, 65537, 1376237, 0, 65537, 1376238, 0, 65537, 1376239, 0, 65537, 1376240, 0, 65537, 1376241, 0, 65537, 1376242, 0, 65537, 1376243, 0, 65537, 1376244, 0, 65537, 1376245, 0, 65537, 1376246, 0, 65537, 1376247, 0, 65537, 1376248, 0, 0, 1376249, 0, 1, 1376250, 0, 2, 1310725, 0, 0, 1310726, 0, 1, 1310727, 0, 1, 1310728, 0, 1, 1310729, 0, 1, 1310730, 0, 1, 1310731, 0, 1, 1310732, 0, 1, 1310733, 0, 1, 1310734, 0, 1, 1310735, 0, 1, 1310736, 0, 0, 1310737, 0, 65537, 1310738, 0, 65537, 1310739, 0, 65537, 1310740, 0, 65537, 1310741, 0, 65537, 1310742, 0, 65537, 1310743, 0, 65537, 1310744, 0, 65537, 1310745, 0, 65537, 1310746, 0, 65537, 1310747, 0, 65537, 1310748, 0, 65537, 1310749, 0, 65537, 1310750, 0, 65537, 1310751, 0, 65537, 1310752, 0, 65537, 1310753, 0, 65537, 1310754, 0, 65537, 1310755, 0, 65537, 1310756, 0, 65537, 1310757, 0, 65538, 1441752, 0, 65536, 1441753, 0, 65537, 1441754, 0, 65537, 1441755, 0, 65537, 1441756, 0, 65537, 1441757, 0, 65537, 1441758, 0, 65537, 1441759, 0, 65537, 1441760, 0, 0, 1441761, 0, 1, 1441762, 0, 1, 1441763, 0, 1, 1441764, 0, 0, 1441765, 0, 65537, 1441766, 0, 65537, 1441767, 0, 65537, 1441768, 0, 65537, 1441769, 0, 65537, 1441770, 0, 65537, 1441771, 0, 65537, 1441772, 0, 65537, 1441773, 0, 65537, 1441774, 0, 65537, 1441775, 0, 65537, 1441776, 0, 65537, 1441777, 0, 65537, 1441778, 0, 65537, 1441779, 0, 65537, 1441780, 0, 65537, 1441781, 0, 65537, 1441782, 0, 65537, 1441783, 0, 65537, 1441784, 0, 65537, 1441785, 0, 65537, 1441786, 0, 65538, 1376261, 0, 65536, 1376262, 0, 65537, 1376263, 0, 65537, 1376264, 0, 65537, 1376265, 0, 65537, 1376266, 0, 65537, 1376267, 0, 65537, 1376268, 0, 65537, 1376269, 0, 65537, 1376270, 0, 65537, 1376271, 0, 65537, 1376272, 0, 65537, 1376273, 0, 65537, 1376274, 0, 65537, 1376275, 0, 65537, 1376276, 0, 65537, 1376277, 0, 65537, 1376278, 0, 65537, 1376279, 0, 65537, 1376280, 0, 65537, 1376281, 0, 65537, 1376282, 0, 65537, 1376283, 0, 65537, 1376284, 0, 65537, 1376285, 0, 65537, 1376286, 0, 65537, 1376287, 0, 65537, 1376288, 0, 65537, 1376289, 0, 65537, 1376290, 0, 65537, 1376291, 0, 65537, 1376292, 0, 65537, 1376293, 0, 65538, 1507288, 0, 131072, 1507289, 0, 131073, 1507290, 0, 131073, 1507291, 0, 131073, 1507292, 0, 131073, 1507293, 0, 131073, 1507294, 0, 131073, 1507295, 0, 131073, 1507296, 0, 131073, 1507297, 0, 131073, 1507298, 0, 131073, 1507299, 0, 131073, 1507300, 0, 131073, 1507301, 0, 131073, 1507302, 0, 131073, 1507303, 0, 131073, 1507304, 0, 131073, 1507305, 0, 131073, 1507306, 0, 131073, 1507307, 0, 131073, 1507308, 0, 131073, 1507309, 0, 131073, 1507310, 0, 131073, 1507311, 0, 131073, 1507312, 0, 131073, 1507313, 0, 131073, 1507314, 0, 131073, 1507315, 0, 131073, 1507316, 0, 131073, 1507317, 0, 131073, 1507318, 0, 131073, 1507319, 0, 131073, 1507320, 0, 0, 1507321, 0, 65537, 1507322, 0, 65538, 1441797, 0, 65536, 1441798, 0, 65537, 1441799, 0, 0, 1441800, 0, 131073, 1441801, 0, 131073, 1441802, 0, 131073, 1441803, 0, 131073, 1441804, 0, 131073, 1441805, 0, 131073, 1441806, 0, 131073, 1441807, 0, 131073, 1441808, 0, 131073, 1441809, 0, 131073, 1441810, 0, 131073, 1441811, 0, 131073, 1441812, 0, 131073, 1441813, 0, 131073, 1441814, 0, 131073, 1441815, 0, 131073, 1441816, 0, 131073, 1441817, 0, 131073, 1441818, 0, 131073, 1441819, 0, 131073, 1441820, 0, 131073, 1441821, 0, 131073, 1441822, 0, 131073, 1441823, 0, 131073, 1441824, 0, 131073, 1441825, 0, 131073, 1441826, 0, 131073, 1441827, 0, 131073, 1441828, 0, 131073, 1441829, 0, 131074, 1572856, 0, 65536, 1572857, 0, 65537, 1572858, 0, 65538, 1507333, 0, 65536, 1507334, 0, 65537, 1507335, 0, 65538, 1638392, 0, 65536, 1638393, 0, 65537, 1638394, 0, 65538, 1572869, 0, 65536, 1572870, 0, 65537, 1572871, 0, 65538, 1703928, 0, 65536, 1703929, 0, 65537, 1703930, 0, 65538, 1638405, 0, 65536, 1638406, 0, 65537, 1638407, 0, 65538, 1769464, 0, 65536, 1769465, 0, 65537, 1769466, 0, 65538, 1703941, 0, 65536, 1703942, 0, 65537, 1703943, 0, 65538, 1835000, 0, 65536, 1835001, 0, 65537, 1835002, 0, 65538, 1769477, 0, 65536, 1769478, 0, 65537, 1769479, 0, 65538, 1900536, 0, 65536, 1900537, 0, 65537, 1900538, 0, 65538, 1835013, 0, 65536, 1835014, 0, 65537, 1835015, 0, 65538, 1966072, 0, 65536, 1966073, 0, 65537, 1966074, 0, 65538, 1900549, 0, 65536, 1900550, 0, 65537, 1900551, 0, 65538, 2031608, 0, 65536, 2031609, 0, 65537, 2031610, 0, 65538, 1966085, 0, 65536, 1966086, 0, 65537, 1966087, 0, 65538, 2097144, 0, 65536, 2097145, 0, 65537, 2097146, 0, 65538, 2031621, 0, 65536, 2031622, 0, 65537, 2031623, 0, 65538, 2162680, 0, 65536, 2162681, 0, 65537, 2162682, 0, 65538, 2097157, 0, 65536, 2097158, 0, 65537, 2097159, 0, 65538, 2228216, 0, 65536, 2228217, 0, 65537, 2228218, 0, 0, 2228219, 0, 1, 2228220, 0, 1, 2228221, 0, 1, 2228222, 0, 1, 2228223, 0, 1, 2162688, 0, 1, 2162689, 0, 1, 2162690, 0, 1, 2162691, 0, 1, 2162692, 0, 1, 2162693, 0, 0, 2162694, 0, 65537, 2162695, 0, 65538, 2293752, 0, 65536, 2293753, 0, 65537, 2293754, 0, 65537, 2293755, 0, 65537, 2293756, 0, 65537, 2293757, 0, 65537, 2293758, 0, 65537, 2293759, 0, 65537, 2228224, 0, 65537, 2228225, 0, 65537, 2228226, 0, 65537, 2228227, 0, 65537, 2228228, 0, 65537, 2228229, 0, 65537, 2228230, 0, 65537, 2228231, 0, 65538, 2359288, 0, 131072, 2359289, 0, 131073, 2359290, 0, 131073, 2359291, 0, 131073, 2359292, 0, 131073, 2359293, 0, 131073, 2359294, 0, 131073, 2359295, 0, 131073, 2293760, 0, 131073, 2293761, 0, 131073, 2293762, 0, 131073, 2293763, 0, 131073, 2293764, 0, 131073, 2293765, 0, 131073, 2293766, 0, 131073, 2293767, 0, 131074 )

[node name="Coin" parent="EverythingButPlayer" instance=ExtResource( 14 )]
position = Vector2( -152, 32 )

[node name="Coin2" parent="EverythingButPlayer" instance=ExtResource( 14 )]
position = Vector2( -136, 32 )

[node name="Coin3" parent="EverythingButPlayer" instance=ExtResource( 14 )]
position = Vector2( -120, 32 )

[node name="Coin4" parent="EverythingButPlayer" instance=ExtResource( 14 )]
position = Vector2( -104, 32 )

[node name="Coin5" parent="EverythingButPlayer" instance=ExtResource( 14 )]
position = Vector2( 82, 18 )

[node name="Coin6" parent="EverythingButPlayer" instance=ExtResource( 14 )]
position = Vector2( 98, 18 )

[node name="Coin7" parent="EverythingButPlayer" instance=ExtResource( 14 )]
position = Vector2( 114, 18 )

[node name="Coin8" parent="EverythingButPlayer" instance=ExtResource( 14 )]
position = Vector2( 130, 18 )

[node name="Sprite" type="Sprite" parent="EverythingButPlayer"]
position = Vector2( 0, -16 )
texture = ExtResource( 7 )

[node name="Player" parent="." instance=ExtResource( 1 )]
applied_torque = 5.0

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Player"]
remote_path = NodePath("../../Camera2D")

[node name="Camera2D" parent="." instance=ExtResource( 6 )]

[node name="TopLeft" parent="Camera2D/Limits" index="0"]
position = Vector2( -320, -184 )

[node name="BottomRight" parent="Camera2D/Limits" index="1"]
position = Vector2( 304, 184 )

[node name="SlowMotionEffect" parent="." instance=ExtResource( 3 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Sounds" parent="." instance=ExtResource( 2 )]

[node name="CollectTimer" type="Timer" parent="."]
one_shot = true

[node name="EndLevelZone" parent="." instance=ExtResource( 16 )]
position = Vector2( 0, 224 )
scene_to_load = "res://assets/objects/level2/level2.tscn"

[node name="CollisionShape2D" parent="EndLevelZone" index="0"]
shape = SubResource( 11 )

[editable path="Camera2D"]

[editable path="EndLevelZone"]
